--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "flowbite-react": "^0.9.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "pocketbase": "^0.21.2",
     "react": "^18",
     "react-dom": "^18"
   },
