--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "axios": "^1.6.8",
     "flowbite-react": "^0.9.0",
     "lucide-react": "^0.378.0",
+    "mongoose": "^8.3.4",
     "next": "14.2.3",
+    "pg": "^8.11.5",
     "pocketbase": "^0.21.2",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18"
   },
