--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "flowbite-react": "^0.9.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
