--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.9.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
