--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "flowbite-react": "^0.9.0",
